2014-04-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_read_cb): Call amar_stop_read.
	* amar-src/amar.c (set_amar_read_cb): Call amar_start_read.

2014-04-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix compiler warning.
	* config/amanda/syshacks.m4: Compile on s390x-8-linux-*

2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg: Fix perl warning.

2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix.
	* perl/Amanda/Interactivity/email.pm: Try to fix memory leak.
	* perl/Amanda/ScanInventory.pm: Abort the scan on inventory error.

2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Do not use newer glib function.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Taper_Scribe.pl (set_write_timestamp): Add method.
	* perl/Amanda/Taper/Scan.pm: Fix perl warning.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg (lookup_by_barcode): New method to return a
	  tle from a barcode.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (_get_state): Lookupo label in tapelist
	  file if it is not availbale in bc2lb.

2014-04-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan.pm: Do not se the same tape twice in the same
	  run.
	* perl/Amanda/Taper/Scribe.pm: Set taperscan write_timestamp.

2014-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_read, set_amar_read_cb): Add a done_cb.
	* amar-src/amar.c (amar_set_error): New function to set an error.
	* amar-src/amar.h: New prototype.
	* amar-src/amarchiver.c: Use NULL done_cb.
	* amar-src/amar-test.c: Pass a NULL done_cb.
	* installcheck/Amanda_Archive.pl: Test set_read_cb with done_cb.
	* perl/Amanda/Archive.swg: Handle done_cb and error.
	* perl/Amanda/MainLoop.swg (run_until_empty): Remove method.
